# syfe-assignment

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ruff.yml
pages/: cart_page.py  checkout_page.py  inventory_page.py  login_page.py  product_details_page.py
tests/: test.py
utils/: base_test.py
